--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.EVA2"
         tools:targetApi="31">
         <activity
+            android:name=".prueba"
+            android:exported="false" />
+        <activity
+            android:name=".finalPage"
+            android:exported="false" />
+        <activity
+            android:name=".Counter"
+            android:exported="false" />
+        <activity
+            android:name=".OptionsCoffe"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
